--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Her har jeg lagt til lenke til css kildene så programmet forstår hvordan den skal fungere.-->
   <link href="./src/output.css" rel="Main">
   <link href="./src/styles.css" rel="stylesheet">
+  <title>This is the title</title>
   <style>
     /*Her har jeg lagt til et bilde i bakgrunnen.*/
     body {
